# igvc-stereo

./: CMakeLists.txt  CMakeLists.txt~  README.md  package.xml  package.xml~
cfg/: color_filter.cfg  line_filter.cfg  rbflag_filter.cfg
include/: RBflag_filter.h  color_filter.h  deviceQueryIGVC.txt  rbflag_filter.h  rbflag_filter.h.save  vision3d.h  whiteline_filter.h
launch/: igvc-stereo.launch  igvc_stereo.launch  local_stereo.launch  test_orig.launch  test_pclonly.launch  test_tx2.launch
src/: RBflag_filter.cpp  color_filter.cpp  color_filter_orig.cpp  main.cpp  main.cpp~  mainWhiteOnly.cpp  main_original.cpp  main_pcl.cpp  process.nu  rbflag_filter.cpp  rbflag_filter.cpp.save  tx2main.cpp  tx2main_pcl.cpp  vision3d.cpp  whiteline_filter.cpp  zed_wrapper_nodelet.cpp~
